kubernetes-controllers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      nodeSelector:
        homework: "true"  # Указываем селектор уровня ноды
      containers:
      - name: nginx
        image: nginx:latest
        lifecycle:
          postStart:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - |
                  rm -f /usr/share/nginx/html/index.html
                  find /homework -type f -exec ln -s {} /usr/share/nginx/html \;
        ports:
        - containerPort: 80
        volumeMounts:
        - name: workdir
          mountPath: "/homework"
        - name: nginx-config
          mountPath: "/etc/nginx/conf.d/default.conf"
          subPath: default.conf
        readinessProbe:
          exec:
            command:
              - cat
              - /homework/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: workdir
        emptyDir: {}
      - name: nginx-config
        configMap:
          name: nginx-config
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
