kubernetes-controllers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: homework
spec:
  selector:
    app: homework
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 80
