kubernetes-controllers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /homepage
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /index.html
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8000
